src/styles/partials/_top.scss
.top {
  margin: 0;
  display: grid;
  padding: $spacing-md 0;
  grid-column: 2 / -2;
  align-items: center;

  @include media-md {
    padding: $spacing-3xl 0 $spacing-3xl;
  }

  @media media-lg-max {
    grid-template-columns: auto auto;
  }
}

.top_logo {
  grid-column: 1 / 2;
  grid-row: 1;
  margin: 0;
}

.top_toggle {
  position: relative;
  top: -0.3rem;
  grid-column: 2 / 3;
  grid-row: 1;
  display: inline-block;
  width: auto;
  margin-right: -$spacing-md;
  padding: 1rem calc(18px + #{$spacing-md} * 2) 1rem 0;
  text-align: right;
  background: transparent inline-svg('<svg width="18" height="12" viewBox="0 0 18 12" xmlns="http://www.w3.org/2000/svg"><path d="M18 10v2H0v-2h18zm0-5v2H0V5h18zm0-5v2H0V0h18z" fill="#{$color-brand-blueAlt}" fill-rule="evenodd"/></svg>') no-repeat;
  background-position: right #{$spacing-md} center;
  color: $color-brand-blueAlt;
  font-size: 1.4rem;
}

.top_nav_inner {
  padding-bottom: $spacing-xl;
}

[aria-labelledby="menu-button"] {
  display: none;
}

.top [aria-expanded="true"] + [aria-labelledby="menu-button"] {
  display: block;
}

@include media-lg-min {
  .top_logo {
    grid-column: -2 / -1;
    grid-row: 1;
  }

  .top_nav {
    position: relative;
    grid-column: 1 / -2;
    grid-row: 1;
    min-height: 4rem;
  }

  .top_nav_inner {
    position: absolute;
    width: calc(100% + 2rem);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    margin: -2rem 0 0 -2rem;
    padding: 2rem;
    row-gap: $spacing-lg;
  }

  .top_nav h4 {
    grid-row: 1;
    margin: 0;
    padding: 0;
    opacity: 0.5;
    text-transform: uppercase;
  }

  .top_nav ul {
    grid-row: 2;
    display: none;
    margin: 0;
    padding: 0 0 $spacing-xl;
    list-style: none;
  }

  .top_nav li + li {
    margin-top: $spacing-md;
  }

  .top_nav:hover,
  .top_nav:focus-within {
    .top_nav_inner {
      background: #fff;
      box-shadow: 0 1px 6px -3px rgba(15,15,14,0.30), 0 5px 25px -7px rgba(15,15,14,0.30), 0 10px 50px -20px rgba(15,15,14,0.30);
    }

    ul {
      display: block;
    }
  }
}

